add: activities section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,25 @@
           </div>
         </header>
       </article>
+      <article class="our-activities">
+        <header>
+          <h2>OUR ACTIVITIES</h2>
+          <p>
+            we are dedicated to supporting newcomers as they settle into their
+            new community. Our activities include traditional dance and praise
+            and worship hours enriching the cultural experience for all
+            involved.
+          </p>
+          <p>
+            Our mission extends to aiding in job searches, providing homemade
+            meals to ease dietary transitions, and fostering community
+            volunteerism. By offering essential information and creating a
+            supportive network, we help individuals adjust and thrive. Join us
+            in making integration smooth and meaningful through our diverse and
+            engaging activities!
+          </p>
+        </header>
+      </article>
       <article class="join">
         <header>
           <h2>LOOKING TO JOIN US?</h2>
