--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="The Angels Foundation is dedicated to helping newcomers settle into their new community. We assist with job searches, provide homemade meals, and encourage community volunteering. Learn more about our services, partners, and activities."
+    />
+    <meta
+      name="keywords"
+      content="The Angels Foundation, newcomer support, community assistance, job search help, homemade meals, community volunteering, government services, non-profit, cultural integration, Ottawa, Value Village, Resettlement Resource Services"
+    />
+    <meta name="author" content="The Angels Foundation" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="media/meta/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="media/meta/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="media/meta/favicon-16x16.png"
+    />
+    <link rel="manifest" href="media/meta/site.webmanifest" />
 
     <link rel="stylesheet" href="index.css" />
 
