add: sponsor logos

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       <article class="about-us">
         <header>
           <h2>A LITTLE ABOUT US</h2>
+        </header>
+        <div class="content">
           <p>
             The Angels Foundation! We are dedicated to supporting newcomers as
             they settle into their new community. Our mission is to assist with
@@ -85,11 +87,13 @@
             individuals adjust and thrive. Together, we make integration smooth
             and meaningful!
           </p>
-        </header>
+        </div>
       </article>
       <article class="our-services">
         <header>
           <h2>OUR SERVICES</h2>
+        </header>
+        <div class="content">
           <p>
             At The Angels Foundation, we are committed to supporting newcomers
             as they embark on their journey in a new community. As a non-profit
@@ -104,12 +108,14 @@
             individuals adjust, thrive, and make meaningful connections.
             Together, we make integration both smooth and enriching!
           </p>
-        </header>
+        </div>
       </article>
       <article class="our-partners">
         <header>
           <h2>OUR PARTNERS</h2>
-          <div>
+        </header>
+        <div class="content">
+          <p>
             The Angels Foundation, we are grateful for our valued partners:
             Value Village Innes Road Ottawa and Resettlement Resource Services
             Volunteers Ottawa. With their support, we are dedicated to helping
@@ -121,12 +127,25 @@
             thrive. Thank you to Value Village Innes Road Ottawa and
             Resettlement Resource Services Volunteers Ottawa for partnering with
             us to make integration smooth and meaningful!
+          </p>
+          <div class="showcase">
+            <figure>
+              <img src="media/epiphany_logo.png" alt="" />
+            </figure>
+            <figure>
+              <img src="media/vv_logo.png" alt="" />
+            </figure>
+            <figure>
+              <img src="media/hd_logo.png" alt="" />
+            </figure>
           </div>
-        </header>
+        </div>
       </article>
       <article class="our-activities">
         <header>
           <h2>OUR ACTIVITIES</h2>
+        </header>
+        <div class="content">
           <p>
             we are dedicated to supporting newcomers as they settle into their
             new community. Our activities include traditional dance and praise
@@ -141,12 +160,14 @@
             in making integration smooth and meaningful through our diverse and
             engaging activities!
           </p>
-        </header>
+        </div>
       </article>
       <article class="join">
         <header>
           <h2>LOOKING TO JOIN US?</h2>
-          <div>
+        </header>
+        <div class="content">
+          <p>
             Are you looking to make a meaningful impact? Join The Angels
             Foundation and help us support newcomers as they settle into their
             new community. Our mission includes assisting with job searches,
@@ -156,8 +177,8 @@
             individuals adjust and thrive. Together, we make integration smooth
             and meaningful. Get involved today and be part of a team that makes
             a difference!
-          </div>
-        </header>
+          </p>
+        </div>
       </article>
       <article class="gallery">
         <header>
