update: partners section

--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
             Value Village Innes Road Ottawa and Resettlement Resource Services
             Volunteers Ottawa. With their support, we are dedicated to helping
             newcomers settle into their new community. Our mission includes
-            assisting with job searches, providing homemade meals to ease
+            assisting with job searches, providing Traditional meals to ease
             dietary transitions, and encouraging community volunteering.
             Together, we offer essential information on free government services
             and create a supportive network to help individuals adjust and
-            thrive. Thank you to Value Village Innes Road Ottawa and
-            Resettlement Resource Services Volunteers Ottawa for partnering with
-            us to make integration smooth and meaningful!
+            thrive. Thank you to 2119 Orleans Manager Nina Adam Value Village
+            Innes Road Ottawa and Resettlement Resource Services Volunteers
+            Ottawa for partnering with us to make integration smooth and
+            meaningful!
           </p>
           <div class="showcase">
             <figure>
