--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             At The Angels Foundation, we are committed to supporting newcomers
             as they embark on their journey in a new community. As a non-profit
             organization, our mission is to facilitate a smooth transition by
-            assisting with job searches, providing homemade meals to ease
+            assisting with job searches, providing local cultural food to ease
             dietary adjustments, and encouraging community volunteering.
           </p>
           <p>
@@ -106,7 +106,8 @@
             available locally, ensuring that newcomers have the resources they
             need. Our goal is to create a supportive network that helps
             individuals adjust, thrive, and make meaningful connections.
-            Together, we make integration both smooth and enriching!
+            Together, we make integration both smooth and enriching! Anti
+            raising workshops
           </p>
         </div>
       </article>
@@ -158,6 +159,39 @@
             in making integration smooth and meaningful through our diverse and
             engaging activities!
           </p>
+        </div>
+      </article>
+      <article class="upcoming-events">
+        <header>
+          <h2>UPCOMING EVENTS</h2>
+        </header>
+        <div class="content">
+          <p>
+            At The Angels Foundation, our mission is to support newcomers in our
+            community by guiding them through essential systems and providing
+            vital resources. We offer assistance like Providing the new
+            immigrants with information on how to accessing some free government
+            services, -Provide job search support, temporary accommodation, -
+            Provide culturally appropriate, nutritious food.
+          </p>
+          <p>
+            Additionally, we also provide spiritual nourishment to help
+            newcomers feel welcomed and integrated into their new environment.
+            Our goal is to ensure a smooth transition and a supportive
+            foundation for all who seek our help.
+          </p>
+        </div>
+        <div class="grid">
+          <div class="media-container">
+            <div class="action-overlay">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                <path
+                  d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                />
+              </svg>
+            </div>
+            <img class="media" src="media/event.jpg" alt="Video Thumbnail" />
+          </div>
         </div>
       </article>
       <article class="join">
