--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@
         <div class="media-stack">
           <div class="group">
             <h3>Job Search Support</h3>
-            <p></p>
+            <p>
+              We're dedicated to supporting newcomers in our community by
+              providing essential job search resources and guidance. Through
+              workshops and mentorship, we empower individuals to navigate the
+              local job market with confidence. Together, we build connections
+              and foster a sense of belonging for all!
+            </p>
             <div class="grid">
               <figure class="media-container">
                 <div class="action-overlay">
@@ -171,7 +177,12 @@
 
           <div class="group">
             <h3>Food Services</h3>
-            <p></p>
+            <p>
+              Our organization is dedicated to helping newcomers settle in by
+              offering traditional nutritional meals that celebrate their
+              heritage. By nourishing both body and spirit, we foster a sense of
+              belonging and create a welcoming community for all.
+            </p>
             <div class="grid">
               <figure class="media-container">
                 <div class="action-overlay">
@@ -405,22 +416,47 @@
             </div>
           </div>
 
-          <!-- <div class="group">
+          <div class="group">
             <h3>Donations</h3>
-            <p></p>
+            <p>
+              Our nonprofit organization is devoted to supporting newcomers by
+              providing donations of seasonal clothing to ensure their comfort
+              as they settle into our community. We believe that everyone
+              deserves warmth and dignity during their transition to a new home.
+            </p>
             <div class="grid">
-              <figure class="media-container">
+              <div class="media-container">
                 <div class="action-overlay">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <path
-                      d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                      d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
                     />
                   </svg>
                 </div>
-                <img class="media" src="media/1.jpeg" alt="" />
-              </figure>
+                <img
+                  class="thumbnail"
+                  data-video="media/d1.mp4"
+                  src="media/d1.png"
+                  alt="Video Thumbnail"
+                />
+              </div>
+              <div class="media-container">
+                <div class="action-overlay">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                    <path
+                      d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                    />
+                  </svg>
+                </div>
+                <img
+                  class="thumbnail"
+                  data-video="media/d2.mp4"
+                  src="media/d2.png"
+                  alt="Video Thumbnail"
+                />
+              </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </article>
 
