--- a/index.html
+++ b/index.html
@@ -91,6 +91,45 @@
           </p>
         </div>
       </article>
+      <article class="about-us">
+        <header>
+          <h2>Our Board of Directors</h2>
+        </header>
+        <div class="board-grid">
+          <div class="board-member">
+            <img src="media/b1.jpeg" alt="Board Member" />
+            <h3>Andrea Ciccarelli</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b2.jpeg" alt="Board Member" />
+            <h3>Nina Adams</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b3.jpeg" alt="Board Member" />
+            <h3>Njoku Paul Nnamdi</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b4.jpeg" alt="Board Member" />
+            <h3>Amah Itah Samuel</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b5.jpeg" alt="Board Member" />
+            <h3>Theodora Felix Isuku</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b6.jpeg" alt="Board Member" />
+            <h3>David Ovbiebo</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b7.jpeg" alt="Board Member" />
+            <h3>Angela Omoike</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/b8.jpeg" alt="Board Member" />
+            <h3>Jeniffer Omoike</h3>
+          </div>
+        </div>
+      </article>
       <article class="our-services">
         <header>
           <h2>OUR SERVICES</h2>
@@ -587,6 +626,136 @@
             <img class="media" src="media/event.jpg" alt="Video Thumbnail" />
           </div>
         </div>
+      </article>
+      <article class="gallery">
+        <header>
+          <h2>WINTER DRIVE</h2>
+          <div class="content">
+            <p>
+              The Angels Foundation had our winter drive yesterday and it was a
+              huge success. 70 new comers got received items and they were very
+              happy.
+            </p>
+            <br />
+          </div>
+          <div class="grid">
+            <figure class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path
+                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                  />
+                </svg>
+              </div>
+              <img class="media" src="media/w1.jpeg" alt="" />
+            </figure>
+            <figure class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path
+                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                  />
+                </svg>
+              </div>
+              <img class="media" src="media/w2.jpeg" alt="" />
+            </figure>
+            <figure class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path
+                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                  />
+                </svg>
+              </div>
+              <img class="media" src="media/w3.jpeg" alt="" />
+            </figure>
+            <figure class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path
+                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
+                  />
+                </svg>
+              </div>
+              <img class="media" src="media/w4.jpeg" alt="" />
+            </figure>
+            <div class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
+              </div>
+              <img
+                class="thumbnail"
+                data-video="media/w5.mp4"
+                src="media/w5.png"
+                alt="Video Thumbnail"
+              />
+            </div>
+            <div class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
+              </div>
+              <img
+                class="thumbnail"
+                data-video="media/w6.mp4"
+                src="media/w6.png"
+                alt="Video Thumbnail"
+              />
+            </div>
+            <div class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
+              </div>
+              <img
+                class="thumbnail"
+                data-video="media/w7.mp4"
+                src="media/w7.png"
+                alt="Video Thumbnail"
+              />
+            </div>
+            <div class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
+              </div>
+              <img
+                class="thumbnail"
+                data-video="media/w8.mp4"
+                src="media/w8.png"
+                alt="Video Thumbnail"
+              />
+            </div>
+            <div class="media-container">
+              <div class="action-overlay">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
+              </div>
+              <img
+                class="thumbnail"
+                data-video="media/w9.mp4"
+                src="media/w9.png"
+                alt="Video Thumbnail"
+              />
+            </div>
+          </div>
+        </header>
       </article>
       <article class="join">
         <header>
