update: partners section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
         <header>
           <h2>Our Board of Directors</h2>
         </header>
+        <div class="content">
+          <p>
+            Together, we work diligently and responsibly to ensure no newcomer
+            is left behind.
+          </p>
+          <br />
+        </div>
         <div class="board-grid">
           <div class="board-member">
             <img src="media/b1.jpeg" alt="Board Member" />
