update: partners section

--- a/index.html
+++ b/index.html
@@ -104,15 +104,19 @@
         </div>
         <div class="board-grid">
           <div class="board-member">
-            <img src="media/b1.jpeg" alt="Board Member" />
+            <img src="media/andrea.JPG" alt="Board Member" />
             <h3>Andrea Ciccarelli</h3>
           </div>
           <div class="board-member">
-            <img src="media/b2.jpeg" alt="Board Member" />
-            <h3>Nina Adams</h3>
+            <img src="media/david.JPG" alt="Board Member" />
+            <h3>David Oviedo</h3>
           </div>
           <div class="board-member">
-            <img src="media/b3.jpeg" alt="Board Member" />
+            <img src="media/paul.JPG" alt="Board Member" />
+            <h3>Paul Dietz</h3>
+          </div>
+          <div class="board-member">
+            <img src="media/paul-njoku.JPG" alt="Board Member" />
             <h3>Njoku Paul Nnamdi</h3>
           </div>
           <div class="board-member">
@@ -120,19 +124,15 @@
             <h3>Amah Itah Samuel</h3>
           </div>
           <div class="board-member">
-            <img src="media/b5.jpeg" alt="Board Member" />
+            <img src="media/ama-itah.JPG" alt="Board Member" />
             <h3>Theodora Felix Isuku</h3>
           </div>
           <div class="board-member">
-            <img src="media/b6.jpeg" alt="Board Member" />
-            <h3>David Ovbiebo</h3>
-          </div>
-          <div class="board-member">
-            <img src="media/b7.jpeg" alt="Board Member" />
+            <img src="media/angela.JPG" alt="Board Member" />
             <h3>Angela Omoike</h3>
           </div>
           <div class="board-member">
-            <img src="media/b8.jpeg" alt="Board Member" />
+            <img src="media/jennifer.JPG" alt="Board Member" />
             <h3>Jeniffer Omoike</h3>
           </div>
         </div>
