--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h3>Njoku Paul Nnamdi</h3>
           </div>
           <div class="board-member">
-            <img src="media/b4.jpeg" alt="Board Member" />
+            <img src="media/ama-itah.JPG" alt="Board Member" />
             <h3>Amah Itah Samuel</h3>
           </div>
           <div class="board-member">
