update: partners section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h3>Amah Itah Samuel</h3>
           </div>
           <div class="board-member">
-            <img src="media/ama-itah.JPG" alt="Board Member" />
+            <img src="media/theodora.JPG" alt="Board Member" />
             <h3>Theodora Felix Isuku</h3>
           </div>
           <div class="board-member">
